--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 onclick="lookupURL()"
                 class="btn-primary text-white px-8 py-3 rounded-xl font-medium whitespace-nowrap"
               >
-                Analyze
+                Analyze it
               </button>
             </div>
           </div>
@@ -135,3 +135,4 @@
 </body>
 
 </html>
+
